force-app/main/default/objects/LLC_BI__Budget_Transaction_Request__c/LLC_BI__Budget_Transaction_Request__c.object-meta.xml
<CustomObject>
    <description>This object facilitates budget transaction requests. For example, draw funding requests against budget line items.</description>
    <label>Budget Transaction Request</label>
    <nameField>
        <displayFormat>BGT-TXNR-{000000000}</displayFormat>
        <label>Budget Transaction Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Transaction Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>