force-app/main/default/objects/LLC_BI__Budget_Transaction_Request__c/fields/LLC_BI__Budget_Line_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Budget_Line_Item_Description__c</fullName>
    <description>The budget line item description.</description>
    <formula>LLC_BI__Budget_Line_Item__r.LLC_BI__Description__c</formula>
    <label>Budget Line Item Description</label>
    <type>Text</type>
</CustomField>