force-app/main/default/objects/LLC_BI__Budget_Transaction_Request__c/fields/LLC_BI__Percent_Requested__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Percent_Requested__c</fullName>
    <description>Percentage of the budgeted amount that is being requested.</description>
    <formula>LLC_BI__Amount_Requested__c  /  LLC_BI__Amount_Budgeted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Requested</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>