force-app/main/default/objects/LLC_BI__Budget_Transaction_Request__c/fields/LLC_BI__Transaction_Request__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Transaction_Request__c</fullName>
    <description>A link to the parent transaction request record.</description>
    <label>Transaction Request</label>
    <referenceTo>LLC_BI__Transaction_Request__c</referenceTo>
    <relationshipLabel>Budget Transaction Requests</relationshipLabel>
    <relationshipName>Budget_Transaction_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>